# vue_actix_todo

./: readme.md
server/: .gitignore  Cargo.toml  command.txt
server/migrations/2021-09-14-093650_create_todos/: up.sql
server/python_client/: post_get_check.ipynb
server/src/: change_counter.rs  comments_actions.rs  comments_models.rs  error.rs  lib.rs  schema.rs  todos_actions.rs  todos_models.rs
ui/: .gitignore  command.txt  package-lock.json  package.json  tailwind.config.js  vue.config.js
ui/src/: App.vue
ui/src/components/: AddTodo.vue  AddTodoComment.vue  AppHeader.vue  TodoComment.vue  TodoWithComments.vue  axios_instances.ts  date.ts  models.ts
