[package]
name = "todo_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
actix-web = "4.0.0-beta.9"
futures = "0.3"
env_logger = "0.9"
tokio = { version = "1", features = ["time"] }
actix-files = "0.6.0-beta.7"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["tokio-runtime"]